# bachelor-thesis

./: .gitignore  Cargo.toml  JUSTFILE  LICENSE  LICENSE-MIT  README.md  history
benches/: Cargo.toml
benches/osm_reader/: parse_pbf.rs
benches/search/: astar_vs_dijkstra.rs  dijkstra_on_input_graph.rs
crates/ch_core/: Cargo.toml  log.txt  witness_out.txt
crates/ch_core/benches/: node_degrees.rs  parameter_variation.rs  query_stalling.rs  query_time.rs  query_time_algos.rs  strategy_variation.rs  witness_variation.rs
crates/ch_core/src/: astar.rs  constants.rs  contraction_params.rs  contraction_strategy.rs  dijkstra.rs  graph.rs  lib.rs  node_contraction.rs  overlay_graph.rs  prelude.rs  priority_queue.rs  search_graph.rs  statistics.rs  witness_search.rs
crates/ch_core/src/search/: astar.rs  biDirSearch.rs  bidir_dijkstra.rs  bidir_search.rs  ch_search.rs  dijkstra.rs  mod.rs  shortest_path.rs
crates/ch_core/src/util/: cli.rs  math.rs  mod.rs  test_graphs.rs
crates/ch_core/test_data/: edges.csv  nodes.csv
crates/frontend/: package-lock.json  package.json
crates/frontend/src/: App.tsx  style.css
crates/frontend/src-tauri/: Cargo.toml  tauri.conf.json
crates/frontend/src-tauri/src/: main.rs
crates/frontend/src/components/: Map.tsx  MapTalks.tsx
crates/ggez-test/: Cargo.toml
crates/ggez-test/src/: main.rs
crates/graph_viz/: Cargo.toml  vaterstetten_pp.osm.pbf
crates/graph_viz/src/: color_theme.rs  graph_view.rs  main.rs
crates/graph_viz/src/widgets/: debug.rs  interaction.rs  mod.rs
crates/graph_viz_macroquad/: Cargo.toml
crates/graph_viz_macroquad/src/: color_theme.rs  graph_view.rs  main.rs
crates/graph_viz_macroquad/src/widgets/: debug.rs  interaction.rs
crates/osm_reader/: .gitignore  Cargo.toml
crates/osm_reader/benches/: simplify.rs
crates/osm_reader/src/: lib.rs  main.rs  road_types.rs
crates/osm_reader/test_data/: node_refs.osm  node_refs.osm.pbf
crates/repl/: .gitignore  Cargo.toml  history
crates/repl/src/: main.rs
latex/: .gitignore  IDEAS.md  bachelor-thesis.tex  bibliography.bib  settings.sty  tikz-figures.tex
latex/chapters/: 01_introduction.tex  02_foundations.tex  03_methodology.tex
latex/figures/: figure_astar_after_pp.psd
latex/pages/: acronyms.tex  title.tex
latex/tikz/: figure_adj_rep.tex  figure_astar.tex  figure_astar_after.tex  figure_astar_before.tex  figure_bidir_dijk.tex  figure_bidir_searchspace.tex  figure_ch_contraction.tex  figure_overlaygraph.tex
