[package]
name = "graph_viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_graphs = "*"
egui = "*"
eframe = "0.21.3"
ch_core = { path = "../ch_core" }

[profile.release]
lto = true
panic = "abort"
