[package]
name = "repl"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Holzner <daniel.holzner@hm.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch_core = { path = "../ch_core" }
osm_reader = { path = "../osm_reader" }
rand = "0.8.5"
reedline-repl-rs = "1.0.4"
env_logger = "0.10.0"
indicatif = "0.17.6"
